--- a/source/app/ambiental/ambiental.styl
+++ b/source/app/ambiental/ambiental.styl
@@ -3,7 +3,7 @@
     display inline-block
     background-repeat no-repeat
     background-size cover
-    background-image url('../../img/verde.jpg')
+    // background-image url('../../img/verde.jpg')
 
 .Titulo-page
     border-bottom 2px solid darkgreen
