--- a/source/app/bienvenido/estilos.styl
+++ b/source/app/bienvenido/estilos.styl
@@ -2,8 +2,9 @@
   margin-top 5em
   color #2271B3
   font-size 1.5em
-  height 36em
-  width 100%
+  padding-bottom 5em
+  // height 36em
+  // width 100%
   // background-image: url('../../img/can-stock-photo_csp23816549.jpg')
   // background-repeat no-repeat
   // background-position center
@@ -17,9 +18,9 @@
   margin-right 15em
   border-radius 18em
 
-.care1
-  border-radius 50%
-  width 310%
+// .care1
+//   border-radius 50%
+//   width 310%
 
 
 .sectionTitle
@@ -28,7 +29,7 @@
   border-bottom: 2px solid #E0E0E0
   margin-bottom 2.5em
   margin-top 1em
-  left 64px
+  // left 64px
 
 // .row
 //   display flex
@@ -36,60 +37,65 @@
 //   margin auto
 //
 
-.col-xs-12
-  width 75%
+// .col-xs-12
+//   width 75%
 
 
 
-.portafoliocontainer-Title
-  font-size 1.8em
-  width 7em
+// .portafoliocontainer-Title
+//   font-size 1.8em
+//   width 7em
+//
+//
+// .text
+//  color black
+//  width 100%
+//  font-size 17px
 
 
-.text
- color black
- width 100%
- font-size 17px
-
-
-
-
-@media screen and (max-width 721px)
-  .portafoliocontainer-Title
-    width 100%
-
+@media screen and (max-width 403px)
   .sectionTitle
-    width 70%
-
-
-@media screen and (max-width 438px)
-  .col-xs-12
-    width 50%
-    right 2.8em
-    font-size .8em
-    text-align center
-
+    font-size 36px
   .portafoliocontainer-Title
-    width 100%
+    font-size 22px
 
-  .portafoliocontainer
-    right 3.5em
-    height 30em
 
-  .col-xs-12
-    left 0
+// @media screen and (max-width 721px)
+//   .portafoliocontainer-Title
+//     width 100%
+//
+//   .sectionTitle
+//     width 70%
 
-  .text
-    width 95%
-    margin 5px
 
-  .sectionTitle
-    right 5em
-    width 66%
-
-  .welcome
-    width 26em
-
-@media screen and (max-width 399)
-  .text
-    color red
+// @media screen and (max-width 438px)
+//   .col-xs-12
+//     width 50%
+//     right 2.8em
+//     font-size .8em
+//     text-align center
+//
+//   .portafoliocontainer-Title
+//     width 100%
+//
+//   .portafoliocontainer
+//     right 3.5em
+//     height 30em
+//
+//   .col-xs-12
+//     left 0
+//
+//   .text
+//     width 95%
+//     margin 5px
+//
+//   .sectionTitle
+//     right 5em
+//     width 66%
+//
+//   .welcome
+//     width 26em
+//
+// @media screen and (max-width 399)
+//   .text
+//     color red
