--- a/source/app/configuracion/configuracion.styl
+++ b/source/app/configuracion/configuracion.styl
@@ -74,6 +74,14 @@
      margin 0
      margin-left 6em
 
+@media screen and (max-width: 319px)
+  .FormPerfil
+    padding 3em
+  .ConfiC
+    font-size 1.6em
+  .messegerC
+    margin-left 0
+
 @media screen and (min-width: 320px)
   .messegerC
     margin-left 0
