--- a/source/app/registro/estilos.styl
+++ b/source/app/registro/estilos.styl
@@ -4,14 +4,17 @@
   background-repeat no-repeat
   background-size cover
   background-position fixed
-  padding 8em
+  padding-top 10em
+  padding-bottom 2em
+.RegistroContent
+  text-align center
 .FormRegistro
     background-color snow
     display inline-block
     padding 2em
     border-radius 0.5em
     box-shadow 0.1em 0.1em  #555
-    width 30em
+    width 28em
     /*background-image url('../../img/medicine_phixr.png')*/
     background-repeat no-repeat
     background-position center
@@ -24,13 +27,18 @@
     &-tittle
       color black
 
-@media screen and (min-width: 349px)
-    .FormRegistro
-      padding: 1em
-      width: 24em
-      margin-left: -106px
-      margin-top: 45px
-      &-title
-        margin-bottom 1em
-        border-radius 1em
-        color black
+@media screen and (max-width: 425px)
+  .FormRegistro
+    width auto
+  .RegistroFirst-container
+    margin 0 0.5em
+// @media screen and (min-width: 349px)
+//     .FormRegistro
+//       padding: 1em
+//       width: 24em
+//       margin-left: -106px
+//       margin-top: 45px
+//       &-title
+//         margin-bottom 1em
+//         border-radius 1em
+//         color black
