--- a/source/app/bienvenido/estilos.css
+++ b/source/app/bienvenido/estilos.css
@@ -2,8 +2,7 @@
   margin-top: 5em;
   color: #2271b3;
   font-size: 1.5em;
-  height: 36em;
-  width: 100%;
+  padding-bottom: 5em;
 }
 .heal {
   display: inline-block;
@@ -13,69 +12,18 @@
   margin-right: 15em;
   border-radius: 18em;
 }
-.care1 {
-  border-radius: 50%;
-  width: 310%;
-}
 .sectionTitle {
   text-align: justify;
   font-size: 3em;
   border-bottom: 2px solid #e0e0e0;
   margin-bottom: 2.5em;
   margin-top: 1em;
-  left: 64px;
 }
-.col-xs-12 {
-  width: 75%;
-}
-.portafoliocontainer-Title {
-  font-size: 1.8em;
-  width: 7em;
-}
-.text {
-  color: #000;
-  width: 100%;
-  font-size: 17px;
-}
-@media screen and (max-width: 721px) {
-  .portafoliocontainer-Title {
-    width: 100%;
-  }
+@media screen and (max-width: 403px) {
   .sectionTitle {
-    width: 70%;
-  }
-}
-@media screen and (max-width: 438px) {
-  .col-xs-12 {
-    width: 50%;
-    right: 2.8em;
-    font-size: 0.8em;
-    text-align: center;
+    font-size: 36px;
   }
   .portafoliocontainer-Title {
-    width: 100%;
-  }
-  .portafoliocontainer {
-    right: 3.5em;
-    height: 30em;
-  }
-  .col-xs-12 {
-    left: 0;
-  }
-  .text {
-    width: 95%;
-    margin: 5px;
-  }
-  .sectionTitle {
-    right: 5em;
-    width: 66%;
-  }
-  .welcome {
-    width: 26em;
-  }
-}
-@media screen and (max-width: 399) {
-  .text {
-    color: #f00;
+    font-size: 22px;
   }
 }
